[GridDyna] Using gridsuite filter library for mapping