@@ -7,25 +7,21 @@
 package org.gridsuite.mapping.server.service.implementation;
 
 import com.powsybl.commons.PowsyblException;
-import com.powsybl.iidm.network.Country;
-import com.powsybl.iidm.network.Substation;
+import com.powsybl.iidm.network.Identifiable;
 import com.powsybl.iidm.network.Network;
 import com.powsybl.network.store.client.NetworkStoreService;
 import com.powsybl.network.store.client.PreloadingStrategy;
+import org.apache.commons.lang3.StringUtils;
+import org.gridsuite.filter.utils.FiltersUtils;
 import org.gridsuite.mapping.server.dto.*;
-import org.gridsuite.mapping.server.dto.filters.AbstractFilter;
 import org.gridsuite.mapping.server.model.NetworkEntity;
 import org.gridsuite.mapping.server.repository.NetworkRepository;
 import org.gridsuite.mapping.server.service.NetworkService;
 import org.gridsuite.mapping.server.utils.EquipmentType;
-import org.gridsuite.mapping.server.utils.Methods;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.ComponentScan;
 import org.springframework.core.io.Resource;
-import org.springframework.expression.ExpressionParser;
-import org.springframework.expression.spel.SpelEvaluationException;
-import org.springframework.expression.spel.standard.SpelExpressionParser;
 import org.springframework.http.*;
 import org.springframework.stereotype.Service;
 import org.springframework.util.LinkedMultiValueMap;
@@ -35,10 +31,11 @@ import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.util.*;
-import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
 
-import static org.gridsuite.mapping.server.MappingConstants.*;
+import static org.gridsuite.filter.utils.expertfilter.ExpertFilterUtils.getFieldValue;
+import static org.gridsuite.filter.utils.expertfilter.FieldType.*;
+import static org.gridsuite.mapping.server.MappingConstants.CASE_API_VERSION;
+import static org.gridsuite.mapping.server.MappingConstants.NETWORK_CONVERSION_API_VERSION;
 
 /**
  * @author Mathieu Scalbert <mathieu.scalbert at rte-france.com>
@@ -87,30 +84,27 @@ public class NetworkServiceImpl implements NetworkService {
     public NetworkValues getNetworkValuesFromExistingNetwork(UUID networkUuid) {
         Network network = getNetwork(networkUuid);
 
-        HashMap<String, Set<String>> substationsPropertyValues = getSubstationsPropertyValues(network);
-        HashMap<String, Set<String>> voltageLevelsPropertyValues = getVoltageLevelsPropertyValues(network);
-
         List<EquipmentValues> equipmentValuesList = new ArrayList<>();
 
-        EquipmentValues generatorEquipmentValues = getGeneratorsEquipmentValues(network, voltageLevelsPropertyValues, substationsPropertyValues);
+        EquipmentValues generatorEquipmentValues = getGeneratorsEquipmentValues(network);
         equipmentValuesList.add(generatorEquipmentValues);
 
-        EquipmentValues loadsEquipmentValues = getLoadsEquipmentValues(network, voltageLevelsPropertyValues, substationsPropertyValues);
+        EquipmentValues loadsEquipmentValues = getLoadsEquipmentValues(network);
         equipmentValuesList.add(loadsEquipmentValues);
 
-        EquipmentValues busesEquipmentValues = getBusesEquipmentValues(network, voltageLevelsPropertyValues, substationsPropertyValues);
+        EquipmentValues busesEquipmentValues = getBusesEquipmentValues(network);
         equipmentValuesList.add(busesEquipmentValues);
 
         EquipmentValues linesEquipmentValues = getLinesEquipmentValues(network);
         equipmentValuesList.add(linesEquipmentValues);
 
-        EquipmentValues twoWindingsTransformersEquipmentValues = getTwoWindingsTransformersEquipmentValues(network, substationsPropertyValues);
+        EquipmentValues twoWindingsTransformersEquipmentValues = getTwoWindingsTransformersEquipmentValues(network);
         equipmentValuesList.add(twoWindingsTransformersEquipmentValues);
 
-        EquipmentValues shuntCompensatorsEquipmentValues = getShuntCompensatorsEquipmentValues(network, voltageLevelsPropertyValues, substationsPropertyValues);
+        EquipmentValues shuntCompensatorsEquipmentValues = getShuntCompensatorsEquipmentValues(network);
         equipmentValuesList.add(shuntCompensatorsEquipmentValues);
 
-        EquipmentValues staticVarCompensatorsEquipmentValues = getStaticVarCompensatorEquipmentValues(network, voltageLevelsPropertyValues, substationsPropertyValues);
+        EquipmentValues staticVarCompensatorsEquipmentValues = getStaticVarCompensatorEquipmentValues(network);
         equipmentValuesList.add(staticVarCompensatorsEquipmentValues);
 
         EquipmentValues hdvcLinesEquipmentValues = getHvdcLinesEquipmentValues(network);
@@ -120,6 +114,9 @@ public class NetworkServiceImpl implements NetworkService {
     }
 
     private void setPropertyMap(HashMap<String, Set<String>> propertyMap, String value, String propertyName) {
+        if (StringUtils.isEmpty(value)) {
+            return;
+        }
         if (propertyMap.containsKey(propertyName)) {
             Set<String> propertyValues = propertyMap.get(propertyName);
             propertyValues.add(value);
@@ -130,121 +127,117 @@ public class NetworkServiceImpl implements NetworkService {
         }
     }
 
-    private HashMap<String, Set<String>> getSubstationsPropertyValues(Network network) {
-        final HashMap<String, Set<String>> substationsMap = new HashMap<>();
-        network.getSubstations().forEach(substation -> {
-            // Country
-            Optional<Country> substationCountry = substation.getCountry();
-            if (substationCountry.isPresent()) {
-                String countryName = substationCountry.get().getName();
-                setPropertyMap(substationsMap, countryName, COUNTRY_PROPERTY);
-            }
-            // Add future substations properties here
-
-        });
-        return substationsMap;
+    private void getSubstationsPropertyValues(HashMap<String, Set<String>> valuesMap, Identifiable<?> identifiable) {
+        // Country
+        setPropertyMap(valuesMap, getFieldValue(COUNTRY, "", identifiable), COUNTRY.name());
+        // Add future substations properties here
     }
 
-    private HashMap<String, Set<String>> getVoltageLevelsPropertyValues(Network network) {
-        HashMap<String, Set<String>> voltageLevelsMap = new HashMap<>();
-        network.getVoltageLevels().forEach(voltageLevel -> {
-            // nominalV
-            String voltageLevelNominalV = String.valueOf(voltageLevel.getNominalV());
-            setPropertyMap(voltageLevelsMap, voltageLevelNominalV, NOMINAL_V_PROPERTY);
-            // Add future voltageLevels properties here
-        });
-        return voltageLevelsMap;
+    private void getVoltageLevelsPropertyValues(HashMap<String, Set<String>> valuesMap, Identifiable<?> identifiable) {
+        // nominalV
+        setPropertyMap(valuesMap, getFieldValue(NOMINAL_VOLTAGE, "", identifiable), NOMINAL_VOLTAGE.name());
+        // Add future voltageLevels properties here
     }
 
-    private EquipmentValues getGeneratorsEquipmentValues(Network network, HashMap<String, Set<String>> voltageLevelsPropertyValues, HashMap<String, Set<String>> substationsPropertyValues) {
-        HashMap<String, Set<String>> generatorValuesMap = new HashMap<>();
-        // Own properties
-        network.getGenerators().forEach(generator -> {
-            setPropertyMap(generatorValuesMap, String.valueOf(generator.getId()), ID_PROPERTY);
-            setPropertyMap(generatorValuesMap, String.valueOf(generator.getEnergySource()), ENERGY_SOURCE_PROPERTY);
-            setPropertyMap(generatorValuesMap, String.valueOf(generator.isVoltageRegulatorOn()), VOLTAGE_REGULATOR_ON_PROPERTY);
+    private EquipmentValues getGeneratorsEquipmentValues(Network network) {
+        HashMap<String, Set<String>> generatorValuesMap = new LinkedHashMap<>();
+
+        network.getGeneratorStream().forEach(generator -> {
+            // Own properties
+            setPropertyMap(generatorValuesMap, getFieldValue(ID, "", generator), ID.name());
+            setPropertyMap(generatorValuesMap, getFieldValue(ENERGY_SOURCE, "", generator), ENERGY_SOURCE.name());
+            setPropertyMap(generatorValuesMap, getFieldValue(VOLTAGE_REGULATOR_ON, "", generator), VOLTAGE_REGULATOR_ON.name());
+            // Up level properties
+            getSubstationsPropertyValues(generatorValuesMap, generator);
+            getVoltageLevelsPropertyValues(generatorValuesMap, generator);
         });
-        // Parent properties (merge unnecessary, no overlap in properties
-        generatorValuesMap.putAll(voltageLevelsPropertyValues);
-        generatorValuesMap.putAll(substationsPropertyValues);
 
         return new EquipmentValues(EquipmentType.GENERATOR, generatorValuesMap);
     }
 
-    private EquipmentValues getLoadsEquipmentValues(Network network, HashMap<String, Set<String>> voltageLevelsPropertyValues, HashMap<String, Set<String>> substationsPropertyValues) {
-        HashMap<String, Set<String>> loadValuesMap = new HashMap<>();
-        // Own properties
-        network.getLoads().forEach(load -> {
-            setPropertyMap(loadValuesMap, String.valueOf(load.getLoadType()), LOAD_TYPE_PROPERTY);
-            setPropertyMap(loadValuesMap, String.valueOf(load.getId()), ID_PROPERTY);
-        });
+    private EquipmentValues getLoadsEquipmentValues(Network network) {
+        HashMap<String, Set<String>> loadValuesMap = new LinkedHashMap<>();
 
-        // Parent properties (merge unnecessary, no overlap in properties
-        loadValuesMap.putAll(voltageLevelsPropertyValues);
-        loadValuesMap.putAll(substationsPropertyValues);
+        network.getLoads().forEach(load -> {
+            // Own properties
+            setPropertyMap(loadValuesMap, getFieldValue(ID, "", load), ID.name());
+            setPropertyMap(loadValuesMap, getFieldValue(LOAD_TYPE, "", load), LOAD_TYPE.name());
+            // Up level properties
+            getSubstationsPropertyValues(loadValuesMap, load);
+            getVoltageLevelsPropertyValues(loadValuesMap, load);
+        });
 
         return new EquipmentValues(EquipmentType.LOAD, loadValuesMap);
     }
 
-    private EquipmentValues getBusesEquipmentValues(Network network, HashMap<String, Set<String>> voltageLevelsPropertyValues, HashMap<String, Set<String>> substationsPropertyValues) {
-        HashMap<String, Set<String>> busValuesMap = new HashMap<>();
-        // Own properties
-        network.getBusBreakerView().getBuses().forEach(bus -> setPropertyMap(busValuesMap, bus.getId(), ID_PROPERTY));
+    private EquipmentValues getBusesEquipmentValues(Network network) {
+        HashMap<String, Set<String>> busValuesMap = new LinkedHashMap<>();
 
-        // Parent properties, Bus is in a substation/voltageLevel
-        busValuesMap.putAll(voltageLevelsPropertyValues);
-        busValuesMap.putAll(substationsPropertyValues);
+        network.getBusBreakerView().getBusStream().forEach(bus -> {
+            // Own properties
+            setPropertyMap(busValuesMap, getFieldValue(ID, "", bus), ID.name());
+            // Up level properties
+            getSubstationsPropertyValues(busValuesMap, bus);
+            getVoltageLevelsPropertyValues(busValuesMap, bus);
+        });
 
         return new EquipmentValues(EquipmentType.BUS, busValuesMap);
     }
 
     private EquipmentValues getLinesEquipmentValues(Network network) {
-        HashMap<String, Set<String>> lineValuesMap = new HashMap<>();
+        HashMap<String, Set<String>> lineValuesMap = new LinkedHashMap<>();
+
         // Own properties
-        network.getLines().forEach(line -> setPropertyMap(lineValuesMap, line.getId(), ID_PROPERTY));
+        network.getLineStream().forEach(line -> setPropertyMap(lineValuesMap, getFieldValue(ID, "", line), ID.name()));
 
         return new EquipmentValues(EquipmentType.LINE, lineValuesMap);
     }
 
-    private EquipmentValues getTwoWindingsTransformersEquipmentValues(Network network, HashMap<String, Set<String>> substationsPropertyValues) {
-        HashMap<String, Set<String>> twoWindingsTransformersValuesMap = new HashMap<>();
-        // Own properties
-        network.getTwoWindingsTransformers().forEach(twoWindingsTransformer -> setPropertyMap(twoWindingsTransformersValuesMap, twoWindingsTransformer.getId(), ID_PROPERTY));
+    private EquipmentValues getTwoWindingsTransformersEquipmentValues(Network network) {
+        HashMap<String, Set<String>> twoWindingsTransformersValuesMap = new LinkedHashMap<>();
 
-        // Parent properties, Two Winding transformer is in a substation
-        twoWindingsTransformersValuesMap.putAll(substationsPropertyValues);
+        network.getTwoWindingsTransformerStream().forEach(twoWindingsTransformer -> {
+            // Own properties
+            setPropertyMap(twoWindingsTransformersValuesMap, getFieldValue(ID, "", twoWindingsTransformer), ID.name());
+            // Up level properties
+            getSubstationsPropertyValues(twoWindingsTransformersValuesMap, twoWindingsTransformer);
+        });
 
         return new EquipmentValues(EquipmentType.TWO_WINDINGS_TRANSFORMER, twoWindingsTransformersValuesMap);
     }
 
-    private EquipmentValues getShuntCompensatorsEquipmentValues(Network network, HashMap<String, Set<String>> voltageLevelsPropertyValues, HashMap<String, Set<String>> substationsPropertyValues) {
-        HashMap<String, Set<String>> shuntCompensatorsValuesMap = new HashMap<>();
-        // Own properties
-        network.getShuntCompensators().forEach(shuntCompensator -> setPropertyMap(shuntCompensatorsValuesMap, shuntCompensator.getId(), ID_PROPERTY));
+    private EquipmentValues getShuntCompensatorsEquipmentValues(Network network) {
+        HashMap<String, Set<String>> shuntCompensatorsValuesMap = new LinkedHashMap<>();
 
-        // Parent properties, Shunt compensator is in a substation/voltageLevel
-        shuntCompensatorsValuesMap.putAll(voltageLevelsPropertyValues);
-        shuntCompensatorsValuesMap.putAll(substationsPropertyValues);
+        network.getShuntCompensatorStream().forEach(shuntCompensator -> {
+            // Own properties
+            setPropertyMap(shuntCompensatorsValuesMap, getFieldValue(ID, "", shuntCompensator), ID.name());
+            // Up level properties
+            getSubstationsPropertyValues(shuntCompensatorsValuesMap, shuntCompensator);
+            getVoltageLevelsPropertyValues(shuntCompensatorsValuesMap, shuntCompensator);
+        });
 
         return new EquipmentValues(EquipmentType.SHUNT_COMPENSATOR, shuntCompensatorsValuesMap);
     }
 
-    private EquipmentValues getStaticVarCompensatorEquipmentValues(Network network, HashMap<String, Set<String>> voltageLevelsPropertyValues, HashMap<String, Set<String>> substationsPropertyValues) {
-        HashMap<String, Set<String>> sVarValuesMap = new HashMap<>();
-        // Own properties
-        network.getStaticVarCompensators().forEach(svar -> setPropertyMap(sVarValuesMap, svar.getId(), ID_PROPERTY));
+    private EquipmentValues getStaticVarCompensatorEquipmentValues(Network network) {
+        HashMap<String, Set<String>> sVarValuesMap = new LinkedHashMap<>();
 
-        // Parent properties, Static var compensator is in a substation/voltageLevel
-        sVarValuesMap.putAll(voltageLevelsPropertyValues);
-        sVarValuesMap.putAll(substationsPropertyValues);
+        network.getStaticVarCompensatorStream().forEach(svar -> {
+            // Own properties
+            setPropertyMap(sVarValuesMap, getFieldValue(ID, "", svar), ID.name());
+            // Up level properties
+            getSubstationsPropertyValues(sVarValuesMap, svar);
+            getVoltageLevelsPropertyValues(sVarValuesMap, svar);
+        });
 
         return new EquipmentValues(EquipmentType.STATIC_VAR_COMPENSATOR, sVarValuesMap);
     }
 
     private EquipmentValues getHvdcLinesEquipmentValues(Network network) {
-        HashMap<String, Set<String>> hvdcLineValuesMap = new HashMap<>();
+        HashMap<String, Set<String>> hvdcLineValuesMap = new LinkedHashMap<>();
         // Own properties
-        network.getHvdcLines().forEach(hvdcLine -> setPropertyMap(hvdcLineValuesMap, hvdcLine.getId(), ID_PROPERTY));
+        network.getHvdcLines().forEach(hvdcLine -> setPropertyMap(hvdcLineValuesMap, getFieldValue(ID, "", hvdcLine), ID.name()));
 
         return new EquipmentValues(EquipmentType.HVDC_LINE, hvdcLineValuesMap);
     }
@@ -294,140 +287,17 @@ public class NetworkServiceImpl implements NetworkService {
     public List<OutputNetwork> getNetworks() {
         return networkRepository.findAll().stream()
                 .map(networkEntity -> new OutputNetwork(networkEntity.getNetworkId(), networkEntity.getNetworkName()))
-                .collect(Collectors.toList());
-    }
-
-    private HashMap<String, HashMap<String, String>> getPropertyValuesBySubstations(Network network) {
-        final HashMap<String, HashMap<String, String>> substationsMap = new HashMap<>();
-        network.getSubstations().forEach(substation -> {
-            final HashMap<String, String> substationMap = new HashMap<>();
-            // Country
-            Optional<Country> substationCountry = substation.getCountry();
-            if (substationCountry.isPresent()) {
-                String countryName = substationCountry.get().getName();
-                substationMap.put(COUNTRY_PROPERTY, countryName);
-            }
-            // Add future substations properties here
-            substationsMap.put(substation.getId(), substationMap);
-        });
-        return substationsMap;
-    }
-
-    private HashMap<String, HashMap<String, String>> getPropertyValuesByVoltageLevel(Network network) {
-        final HashMap<String, HashMap<String, String>> voltageLevelsMap = new HashMap<>();
-        network.getVoltageLevels().forEach(voltageLevel -> {
-            final HashMap<String, String> voltageLevelMap = new HashMap<>();
-            // nominalV
-            String voltageLevelNominalV = String.valueOf(voltageLevel.getNominalV());
-            voltageLevelMap.put(NOMINAL_V_PROPERTY, voltageLevelNominalV);
-
-            // Add future voltageLevels properties here
-            voltageLevelsMap.put(voltageLevel.getId(), voltageLevelMap);
-        });
-        return voltageLevelsMap;
-    }
-
-    private List<HashMap<String, String>> getPropertyValuesByGenerators(Network network, HashMap<String, HashMap<String, String>> voltageLevelsValues, HashMap<String, HashMap<String, String>> substationsValues) {
-
-        List<HashMap<String, String>> generators = new ArrayList<>();
-        network.getGenerators().forEach(generator -> {
-            final HashMap<String, String> generatorMap = new HashMap<>();
-            generatorMap.put(ID_PROPERTY, String.valueOf(generator.getId()));
-            generatorMap.put(ENERGY_SOURCE_PROPERTY, String.valueOf(generator.getEnergySource()));
-            generatorMap.put(VOLTAGE_REGULATOR_ON_PROPERTY, String.valueOf(generator.isVoltageRegulatorOn()));
-
-            String voltageLevelId = generator.getTerminal().getVoltageLevel().getId();
-            generatorMap.putAll(voltageLevelsValues.get(voltageLevelId));
-
-            generator.getTerminal().getVoltageLevel().getSubstation().map(Substation::getId).ifPresent(subStationId -> {
-                generatorMap.putAll(substationsValues.get(subStationId));
-            });
-
-            generators.add(generatorMap);
-        });
-        return generators;
-    }
-
-    private List<HashMap<String, String>> getPropertyValuesByLoads(Network network, HashMap<String, HashMap<String, String>> voltageLevelsValues, HashMap<String, HashMap<String, String>> substationsValues) {
-        List<HashMap<String, String>> loads = new ArrayList<>();
-        network.getLoads().forEach(load -> {
-            final HashMap<String, String> loadMap = new HashMap<>();
-            loadMap.put(ID_PROPERTY, String.valueOf(load.getId()));
-            loadMap.put(LOAD_TYPE_PROPERTY, String.valueOf(load.getLoadType()));
-
-            String voltageLevelId = load.getTerminal().getVoltageLevel().getId();
-            loadMap.putAll(voltageLevelsValues.get(voltageLevelId));
-
-            load.getTerminal().getVoltageLevel().getSubstation().map(Substation::getId).ifPresent(subStationId -> {
-                loadMap.putAll(substationsValues.get(subStationId));
-            });
-
-            loads.add(loadMap);
-        });
-        return loads;
-    }
-
-    private List<HashMap<String, String>> getPropertyValuesByStaticVarCompensator(Network network, HashMap<String, HashMap<String, String>> voltageLevelsValues, HashMap<String, HashMap<String, String>> substationsValues) {
-        List<HashMap<String, String>> svars = new ArrayList<>();
-        network.getStaticVarCompensators().forEach(svar -> {
-            final HashMap<String, String> svarMap = new HashMap<>();
-            svarMap.put(ID_PROPERTY, String.valueOf(svar.getId()));
-
-            String voltageLevelId = svar.getTerminal().getVoltageLevel().getId();
-            svarMap.putAll(voltageLevelsValues.get(voltageLevelId));
-
-            svar.getTerminal().getVoltageLevel().getSubstation().map(Substation::getId).ifPresent(subStationId ->
-                svarMap.putAll(substationsValues.get(subStationId)));
-
-            svars.add(svarMap);
-        });
-        return svars;
+                .toList();
     }
 
     private List<String> matchNetworkToRule(Network network, RuleToMatch rule) {
-        HashMap<String, HashMap<String, String>> substationsValues = getPropertyValuesBySubstations(network);
-        HashMap<String, HashMap<String, String>> voltageLevelsValues = getPropertyValuesByVoltageLevel(network);
-
-        List<HashMap<String, String>> correspondingValues;
-        switch (rule.getEquipmentType()) {
-            case GENERATOR:
-                correspondingValues = getPropertyValuesByGenerators(network, voltageLevelsValues, substationsValues);
-                break;
-            case LOAD:
-                correspondingValues = getPropertyValuesByLoads(network, voltageLevelsValues, substationsValues);
-                break;
-            case STATIC_VAR_COMPENSATOR:
-                correspondingValues = getPropertyValuesByStaticVarCompensator(network, voltageLevelsValues, substationsValues);
-                break;
-            default:
-                throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Invalid equipment type");
+        if (rule.getFilter() == null) {
+            return Collections.emptyList();
         }
+        List<Identifiable<?>> matchedEquipments = FiltersUtils.getIdentifiables(rule.getFilter(), network, null);
 
-        return correspondingValues.stream()
-                .map(equipment -> matchEquipmentToRule(equipment, rule))
-                .filter(Objects::nonNull).collect(Collectors.toList());
+        // return only ids
+        return matchedEquipments.stream().map(Identifiable::getId).toList();
     }
 
-    private String matchEquipmentToRule(HashMap<String, String> equipment, RuleToMatch rule) {
-        AtomicReference<String> evaluatedComposition = new AtomicReference<>(rule.getComposition());
-        rule.getFilters().stream().forEach(filter -> {
-            boolean isFilterMatched = matchEquipmentToFilter(equipment, filter);
-            evaluatedComposition.set(evaluatedComposition.get().replace(filter.getFilterId(), Methods.convertBooleanToString(isFilterMatched)));
-        });
-        boolean isMatched = false;
-        try {
-            ExpressionParser parser = new SpelExpressionParser();
-            isMatched = (boolean) parser.parseExpression(evaluatedComposition.get()).getValue();
-
-        } catch (SpelEvaluationException e) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Invalid composition", e);
-        }
-
-        return isMatched ? equipment.get(ID_PROPERTY) : null;
-    }
-
-    private boolean matchEquipmentToFilter(HashMap<String, String> equipment, AbstractFilter filter) {
-        String valueToTest = equipment.get(filter.getProperty());
-        return filter.matchValueToFilter(valueToTest);
-    }
 }
